--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
- 
+
 TWILIO_SID=ACd297bb2d5e39ad3cb42ba0db3af871e6
 TWILIO_AUTH_TOKEN=04df012cdbd82ccd684d9f374780b38b
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=alpha_matka
+DB_DATABASE=alphamataka
 DB_USERNAME=root
 DB_PASSWORD=
 
